# actix-sqlx-sqlite-basic-example

./: Cargo.toml  README.md
migrations/2020-10-23-161641_init/: up.sql
src/: main.rs
static/root/: form.html  index.html
