[package]
name = "actix-sqlx-sqlite-basic-example"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-files = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "sqlite", "time" ] }

env_logger = "0.8.1"
log = "0.4.11"
dotenv = "0.15.0"
